# KawaiiK50000SV

./: .gitignore  .gitmodules  CMakeLists.txt  deploy.sh
scripts/: check_ax  check_ax.swift  dismiss_recovery  dismiss_recovery.swift  inspect_ax  inspect_ax.swift  quit_diag  quit_diag.swift  quit_live  quit_live.swift
source/analysis/: SampleLoader.cpp  SampleLoader.h
source/controller/: KawaiiController.cpp  KawaiiController.h
source/editor/: KawaiiEditor.cpp  KawaiiEditor.h
source/entry/: KawaiiCids.h  KawaiiEntry.cpp
source/gpu/: MetalSineBank.h  MetalSineBank.mm
source/params/: KawaiiFilterTypes.h  KawaiiParams.h
source/processor/: KawaiiProcessor.cpp  KawaiiProcessor.h  KawaiiVoice.h
